--- a/style.css
+++ b/style.css
@@ -33,10 +33,12 @@
     }
 
     /* Header */
-    header {
+    #side-bar {
       border-bottom: 1px solid var(--border);
       padding-bottom: 30px;
+      background-color:gray;
       margin-bottom: 40px;
+
     }
 
     header h1 {
