--- a/style.css
+++ b/style.css
@@ -4,50 +4,92 @@
   padding: 0;
 }
 
+ @font-face {
+  font-family:my-font-one;
+  src: local("karmatic-arcade/ka1.ttf") format('woff2');
+}
+
+@font-face {
+  font-family:'my-font-2'; 
+  src: local("lower-pixel/LowresPixel-Regular.otf") format('woff2');
+}
+
 html {
   font-size: 16px;
 }
 
 body {
   min-height: 100vh;
-  font-family: "Pixelify Sans", "Oswald", sans-serif;
+  font-family:my-font-one;
   background-image: linear-gradient(to right bottom, black, blue);
   display: flex;
+  font-family: my;
   flex-direction: column;
+  align-items: center;
 }
 
 /* NAV BAR */
 #nav-bar {
   display: flex;
+  position: absolute;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
-
-  width: 100%;
+  gap:2rem;
+  width:100%;
   max-width: 70rem;
   height: 4rem;
-
-  margin: 1rem auto;
-
-  border: 2px solid white;
-  background-color: black;
+  margin:1rem auto;
+  border: 2px white solid;
+  color:white;
+  background-color:black;
   text-align: center;
 }
 
-/* NAV ITEMS */
-#nav-bar span {
-  cursor: pointer;
-  font-size: 1.25rem;
+#port-in-nav{
+  font-family:fantasy;
+  margin-top: 1.30rem;
+  font-size: xx-large;
+  color: white;
 }
 
-/* SIDEBAR */
-#side-bar {
-  width: 16rem;
-  min-height: 100vh;
+#main-in-nav,#about-me-in-nav, #projects-in-nav{
+  color: white;
+  font-size: x-large;
+  margin-left: 1.26rem;
+}
+#main-in-nav{
+  margin-left:15rem;
+}
 
-  border: 2px solid white;
+#nav-bar span{
+  cursor: pointer;
+  font-size: 3.25rem;
+}
+
+#main-bar {
+  width: 60rem;
+  min-height: 60vh;
+  border:2px solid white;
+  margin-top: 10rem;
+  display: flex;
   background-color: black;
 }
+
+#my-name{
+  color:white;
+font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+margin-top: 2.50rem;
+margin-left: 25rem;
+}
+
+#main-para{
+  color:white;
+font-family:monospace;
+margin-top: 2.50rem;
+margin-left: 25rem;
+}
+
+
 
 /* MOBILE */
 @media (max-width: 768px) {
@@ -57,8 +99,7 @@ body {
     gap: 1rem;
   }
 
-  #side-bar {
+  #main-bar {
     width: 100%;
     min-height: auto;
-  }
-}
+  }}
