--- a/style.css
+++ b/style.css
@@ -69,8 +69,13 @@ body {
 }
 
 #my-photo{
-  size: 40%;
-  position: relative;
+  width: 40%;
+  height: 40%;
+  border: 0.50rem white solid;
+  border-radius: 50%;
+  margin-top: 5rem;
+  margin-left: 4rem;
+  position:relative;
 }
 
 #main-bar {
@@ -79,18 +84,22 @@ body {
   border:2px solid white;
   margin-top: 10rem;
   display: flex;
+  flex-wrap: nowrap;
   background-color: black;
 }
 
 #my-name{
-  color:white;
+position:absolute;
+color:white;
 font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-margin-top: 2.50rem;
-margin-left: 25rem;
+margin-top: 4rem;
+margin-left: 37rem;
 }
 
 #main-para{
-  color:white;
+position:absolute;
+margin-left: -600px;
+color:white;
 font-family:monospace;
 margin-top: 2.50rem;
 margin-left: 25rem;
